// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SupportButton > matches custom className snapshot 1`] = `
<button
  aria-label="Open support assistant"
  class="relative border-2"
  data-testid="support-button"
>
  <svg
    class="h-6 w-6"
    data-d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
    data-testid="support-icon"
  />
</button>
`;

exports[`SupportButton > matches default state snapshot 1`] = `
<button
  aria-label="Open support assistant"
  class="relative "
  data-testid="support-button"
>
  <svg
    class="h-6 w-6"
    data-d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
    data-testid="support-icon"
  />
</button>
`;

exports[`SupportButton > matches disabled state snapshot 1`] = `
<button
  aria-label="Open support assistant"
  class="relative "
  data-testid="support-button"
  disabled=""
>
  <svg
    class="h-6 w-6"
    data-d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
    data-testid="support-icon"
  />
</button>
`;
